--- a/goodreads.ipynb
+++ b/goodreads.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "id": "aVCytM2-YWWR"
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -47,21 +47,21 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: transformers in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (4.2.2)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (4.56.0)\n",
-      "Requirement already satisfied: numpy in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (1.19.5)\n",
-      "Requirement already satisfied: requests in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (2.25.1)\n",
-      "Requirement already satisfied: filelock in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (3.0.12)\n",
       "Requirement already satisfied: regex!=2019.12.17 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (2020.11.13)\n",
-      "Requirement already satisfied: packaging in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (20.8)\n",
-      "Requirement already satisfied: tokenizers==0.9.4 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (0.9.4)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (4.56.0)\n",
+      "Requirement already satisfied: filelock in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (3.0.12)\n",
+      "Requirement already satisfied: numpy in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (1.19.5)\n",
       "Requirement already satisfied: sacremoses in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (0.0.43)\n",
+      "Requirement already satisfied: packaging in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (20.8)\n",
+      "Requirement already satisfied: requests in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (2.25.1)\n",
+      "Requirement already satisfied: tokenizers==0.9.4 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (0.9.4)\n",
       "Requirement already satisfied: pyparsing>=2.0.2 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from packaging->transformers) (2.4.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (2020.12.5)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (1.26.2)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (2020.12.5)\n",
       "Requirement already satisfied: chardet<5,>=3.0.2 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (4.0.0)\n",
-      "Requirement already satisfied: joblib in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from sacremoses->transformers) (1.0.0)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (2.10)\n",
       "Requirement already satisfied: six in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from sacremoses->transformers) (1.15.0)\n",
+      "Requirement already satisfied: joblib in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from sacremoses->transformers) (1.0.0)\n",
       "Requirement already satisfied: click in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from sacremoses->transformers) (7.1.2)\n"
      ]
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "id": "dl7rqQ4uZPiv"
    },
@@ -83,6 +83,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import torch\n",
+    "import numpy as np\n",
+    "from sklearn import metrics\n",
     "\n",
     "# Preliminaries\n",
     "\n",
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "id": "fF1DCVrCh6_d"
    },
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -159,7 +161,24 @@
     "id": "fdGccqrAZYjw",
     "outputId": "40c9d8a8-0c04-4759-e05e-bbd78f145d2b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/field.py:150: UserWarning: Field class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/example.py:68: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n",
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/example.py:78: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n",
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/iterator.py:48: UserWarning: BucketIterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/iterator.py:48: UserWarning: Iterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Model parameter\n",
     "MAX_SEQ_LEN = 128\n",
@@ -199,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {
     "id": "2RkcXCHSph1_"
    },
@@ -230,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {
     "id": "JRpTJUGhklDv"
    },
@@ -287,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "id": "81w1lahhkozO"
    },
@@ -449,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -500,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "id": "aFBhAW6rwKly"
    },
@@ -539,12 +558,15 @@
     "    ax.set_ylabel('True Labels')\n",
     "\n",
     "    ax.xaxis.set_ticklabels(['SPOILER', 'NON-SPOILER'])\n",
-    "    ax.yaxis.set_ticklabels(['SPOILER', 'NON-SPOILER'])"
+    "    ax.yaxis.set_ticklabels(['SPOILER', 'NON-SPOILER'])\n",
+    "    \n",
+    "    fpr, tpr, thresholds = metrics.roc_curve(y_true, y_pred, pos_label=1)\n",
+    "    print(\"AUC=\", metrics.auc(fpr, tpr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -570,7 +592,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from <== models/goodreads/model.pt\n",
+      "Model loaded from <== models/goodreads/model.pt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/batch.py:23: UserWarning: Batch class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -580,7 +616,8 @@
       "    accuracy                         0.7489    285117\n",
       "   macro avg     0.7385    0.7351    0.7366    285117\n",
       "weighted avg     0.7475    0.7489    0.7480    285117\n",
-      "\n"
+      "\n",
+      "AUC= 0.7350981440798843\n"
      ]
     },
     {
@@ -635,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
