--- a/tvtropes.ipynb
+++ b/tvtropes.ipynb
@@ -47,19 +47,19 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: transformers in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (4.2.2)\n",
+      "Requirement already satisfied: numpy in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (1.19.5)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (2020.11.13)\n",
       "Requirement already satisfied: tqdm>=4.27 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (4.56.0)\n",
-      "Requirement already satisfied: sacremoses in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (0.0.43)\n",
       "Requirement already satisfied: packaging in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (20.8)\n",
       "Requirement already satisfied: tokenizers==0.9.4 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (0.9.4)\n",
-      "Requirement already satisfied: numpy in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (1.19.5)\n",
+      "Requirement already satisfied: sacremoses in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (0.0.43)\n",
       "Requirement already satisfied: filelock in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (3.0.12)\n",
       "Requirement already satisfied: requests in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (2.25.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from transformers) (2020.11.13)\n",
       "Requirement already satisfied: pyparsing>=2.0.2 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from packaging->transformers) (2.4.7)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (2.10)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (2020.12.5)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (1.26.2)\n",
       "Requirement already satisfied: chardet<5,>=3.0.2 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (4.0.0)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (2.10)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from requests->transformers) (1.26.2)\n",
       "Requirement already satisfied: joblib in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from sacremoses->transformers) (1.0.0)\n",
       "Requirement already satisfied: six in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from sacremoses->transformers) (1.15.0)\n",
       "Requirement already satisfied: click in /home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages (from sacremoses->transformers) (7.1.2)\n"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "id": "dl7rqQ4uZPiv"
    },
@@ -83,6 +83,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import torch\n",
+    "import numpy as np\n",
+    "from sklearn import metrics\n",
     "\n",
     "# Preliminaries\n",
     "\n",
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "id": "fF1DCVrCh6_d"
    },
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -159,7 +161,24 @@
     "id": "fdGccqrAZYjw",
     "outputId": "40c9d8a8-0c04-4759-e05e-bbd78f145d2b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/field.py:150: UserWarning: Field class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/example.py:68: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n",
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/example.py:78: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n",
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/iterator.py:48: UserWarning: BucketIterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/home/darg1/anaconda3/envs/env_pytorch/lib/python3.8/site-packages/torchtext/data/iterator.py:48: UserWarning: Iterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Model parameter\n",
     "MAX_SEQ_LEN = 128\n",
@@ -199,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {
     "id": "2RkcXCHSph1_"
    },
@@ -230,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {
     "id": "JRpTJUGhklDv"
    },
@@ -287,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {
     "id": "81w1lahhkozO"
    },
@@ -451,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -465,7 +484,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from <== models/metrics.pt\n"
+      "Model loaded from <== models/tvtropes/metrics.pt\n"
      ]
     },
     {
@@ -502,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {
     "id": "aFBhAW6rwKly"
    },
@@ -541,12 +560,15 @@
     "    ax.set_ylabel('True Labels')\n",
     "\n",
     "    ax.xaxis.set_ticklabels(['SPOILER', 'NON-SPOILER'])\n",
-    "    ax.yaxis.set_ticklabels(['SPOILER', 'NON-SPOILER'])"
+    "    ax.yaxis.set_ticklabels(['SPOILER', 'NON-SPOILER'])\n",
+    "\n",
+    "    fpr, tpr, thresholds = metrics.roc_curve(y_true, y_pred, pos_label=1)\n",
+    "    print(\"AUC=\", metrics.auc(fpr, tpr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -571,7 +593,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from <== models/model.pt\n"
+      "Model loaded from <== models/tvtropes/model.pt\n"
      ]
     },
     {
@@ -595,7 +617,8 @@
       "    accuracy                         0.7393      1477\n",
       "   macro avg     0.7393    0.7399    0.7391      1477\n",
       "weighted avg     0.7406    0.7393    0.7395      1477\n",
-      "\n"
+      "\n",
+      "AUC= 0.73993564993565\n"
      ]
     },
     {
@@ -650,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
